# abouie_proj

./: README.md  main.py  pyproject.toml
docs/: PHASE2_ROADMAP.md  project_guide.md
notebooks/: colab_gpu.ipynb
papers/: microwave cavity cooling.md  proposal.md
src/: __init__.py  ai_pulse.npy  ai_pulse_final.npy  cavity_cooling.py  dataset_pulses.npy  dataset_scores.npy  dqd_physics.py  generate_dataset.py  generate_safe_sweep.py  generate_solution.py  generate_solution_v2.py  generate_sweep.py  inspect_data.py  model_params.msgpack  norm_stats.npy  optimize_cavity2.py  optimize_champion.py  refine_champion.py  train_diffusion.py  train_neural_pulse.py  verify_solution.py
src/analysis/: __init__.py  figures.py  presentation_figures.py  thermodynamics.py
src/baseline/: __init__.py  stochastic.py
src/floquet/: __init__.py  cycle.py
src/optimization/: __init__.py  grape.py  optimize_cavity.py
src/physics/: __init__.py  hamiltonian.py  initial_states.py  lindblad.py  operators.py
src/rl/: __init__.py  env.py  train_sac.py
src/utils/: __init__.py  io.py
src/validation/: __init__.py  no_go_theorem.py  tier2.py  tier3.py
tests/: test_physics.py
