[project]
name = "abouie_proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffrax>=0.7.0",
    "flax>=0.12.1",
    "jax>=0.8.1",
    "matplotlib>=3.10.7",
    "optax>=0.2.6",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ruff>=0.14.8",
]
